erDiagram
  users ||--|| seller_profiles : owns
  seller_profiles ||--o{ listings : publishes
  users ||--o{ orders : places
  orders ||--o{ order_items : contains
  listings ||--o{ order_items : sold_as
  seller_profiles ||--o{ order_items : fulfills
  seller_profiles ||--o{ payouts : receives

  users {
    bigint id PK
    text email
  }

  seller_profiles {
    bigint id PK
    bigint user_id FK
    text store_name
    text status
  }

  listings {
    bigint id PK
    bigint seller_id FK
    text title
    int price_cents
  }

  orders {
    bigint id PK
    bigint buyer_id FK
    text status
    int total_cents
  }

  order_items {
    bigint id PK
    bigint order_id FK
    bigint listing_id FK
    bigint seller_id FK
    int quantity
  }

  payouts {
    bigint id PK
    bigint seller_id FK
    int amount_cents
    text status
  }
